@@ -1,4 +1,8 @@
-﻿zg 05.11.2014 16:44:44 +0200 - build 4170
+﻿drkns 06.11.2014 15:56:10 +0200 - build 4171
+
+1. С форума: Excepton occured: bad allocation
+
+zg 05.11.2014 16:44:44 +0200 - build 4170
 
 1. уточнение 4047 для плагииновых панелей:
    Если открыть в панели .7z-файл, содержащий внутри папки, стать на папку и нажать CtrlQ, показывает:
